<!-- Tudo deve estar em português, traduz pra outras línguas depois -->

<resources>

    <string-array name="ages">
        <item>Criança</item>
        <item>Adolescente</item>
        <item>Adulto</item>
        <item>Sênior</item>
    </string-array>

    <string-array name="natures">
        <item>Inflexível</item>
        <item>Tímido</item>
        <item>Corajoso</item>
        <item>Valente</item>
        <item>Calmo</item>
        <item>Cuidadoso</item>
        <item>Dócil</item>
        <item>Gentil</item>
        <item>Resistente</item>
        <item>Apressado</item>
        <item>Travesso</item>
        <item>Alegre</item>
        <item>Descuidado</item>
        <item>Solitário</item>
        <item>Suave</item>
        <item>Modesto</item>
        <item>Ingênuo</item>
        <item>Desobediente</item>
        <item>Quieto</item>
        <item>Peculiar</item>
        <item>Precipitado</item>
        <item>Relaxado</item>
        <item>Atrevido</item>
        <item>Sério</item>
        <item>Inseguro</item>
    </string-array>

    <string-array name="ranks">
        <item>Iniciante</item>
        <item>Novato</item>
        <item>Amador</item>
        <item>Ás</item>
        <item>Profissional</item>
    </string-array>

    <string name="app_name">pokejuizo</string>
    <string name="trainers_concept">Conceito</string>
    <string name="trainers_name">Nome</string>

    <string name="save">Salvar</string>
    <string name="com_bine_pokejuizo_shared_preferences">com_bine_pokejuizo_shared_preferences</string>
    <string name="com_bine_pokejuizo_shared_preferences_trainers">Trainers</string>
    <string name="textview">TextView</string>
    <string name="trainer">Treinador</string>
    <string name="library">Biblioteca</string>
    <string name="settings">Configurações</string>
    <string name="pokedex">Pokedex</string>
    <string name="items">Itens</string>
    <string name="abilities">Abilities</string>
    <string name="moves">Movimentos</string>
    <string name="natures">Naturezas</string>
    <string name="learnsets">Learnsets</string>
    <string name="Conceito">Conceito</string>
    <string name="Força">Força</string>
    <string name="Destreza">Destreza</string>
    <string name="Vitalidade">Vitalidade</string>
    <string name="Intuição">Intuição</string>
    <string name="Firme">Firme</string>
    <string name="Legal">Legal</string>
    <string name="Beleza">Beleza</string>
    <string name="Inteligente">Inteligente</string>
    <string name="Fofura">Fofura</string>
    <string name="Luta">Luta</string>
    <string name="Briga">Briga</string>
    <string name="Arremesso">Arremesso</string>
    <string name="Evasiva">Evasiva</string>
    <string name="Armas">Armas</string>
    <string name="Sobrevivência">Sobrevivência</string>
    <string name="Prontidão">Prontidão</string>
    <string name="Atletismo">Atletismo</string>
    <string name="Natureza">Natureza</string>
    <string name="Furtividade">Furtividade</string>
    <string name="Social">Social</string>
    <string name="Charme">Charme</string>
    <string name="Etiqueta">Etiqueta</string>
    <string name="Intimidação">Intimidação</string>
    <string name="Atuação">Atuação</string>
    <string name="Conhecimento">Conhecimento</string>
    <string name="Ofício">Ofício</string>
    <string name="Lore">Lore</string>
    <string name="Ciência">Ciência</string>
    <string name="Medicina">Medicina</string>
    <string name="Name">Name</string>
    <string name="Age">Age</string>
    <string name="Player">Player</string>
    <string name="Concept">Concept</string>
    <string name="Rank">Rank</string>
    <string name="Nature">Nature</string>
    <string name="HP">HP</string>
    <string name="Confidence">Confidence</string>
    <string name="Money">Money</string>
</resources>