<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingStart="20dp"
    android:paddingTop="20dp"
    android:paddingEnd="20dp"
    tools:context=".trainer.ShowTrainer">

    <LinearLayout
        android:id="@+id/AST_LL_NAMEAGE"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:background="@drawable/rect_round_bordered_red_darkerred"
        android:paddingStart="15dp"
        android:paddingTop="10dp"
        android:paddingEnd="15dp"
        android:paddingBottom="10dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/rect_round_white"
            android:paddingStart="16dp"
            android:paddingEnd="16dp">

            <TextView
                android:id="@+id/ST_TV_TITLE_NAME"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:text="@string/Name"
                android:textAllCaps="true"
                android:textColor="@color/black"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/ST_TV_NAME"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/ST_TV_TITLE_NAME"
                android:layout_alignParentStart="true"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/ST_TV_TITLE_AGE"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_alignStart="@id/ST_TV_AGE"
                android:text="@string/Age"
                android:textAllCaps="true"
                android:textColor="@color/black"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/ST_TV_AGE"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/ST_TV_TITLE_AGE"
                android:layout_alignParentEnd="true"
                android:textStyle="bold"
                android:textAllCaps="true"/>

        </RelativeLayout>

    </LinearLayout>


    <RelativeLayout
        android:id="@+id/AST_RL_RANKCONCEPT"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/white_bordered_round_rect"
        android:layout_marginTop="20dp"
        android:padding="16dp"
        android:layout_below="@id/AST_LL_NAMEAGE">

        <TextView
            android:id="@+id/ST_TV_TITLE_RANK"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:text="@string/Rank"
            android:textAllCaps="true"
            android:textColor="@color/black"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/ST_TV_RANK"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/ST_TV_TITLE_RANK"
            android:layout_alignParentStart="true"
            android:textStyle="bold"
            android:textAllCaps="true"/>

        <TextView
            android:id="@+id/ST_TV_TITLE_CONCEPT"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="100dp"
            android:layout_alignParentTop="true"
            android:layout_toEndOf="@id/ST_TV_TITLE_RANK"
            android:text="@string/Concept"
            android:textAllCaps="true"
            android:textColor="@color/black"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/ST_TV_CONCEPT"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/ST_TV_TITLE_CONCEPT"
            android:layout_alignStart="@id/ST_TV_TITLE_CONCEPT"
            android:textStyle="bold" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/AST_RL_NATURE"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/rect_round_black"
        android:layout_below="@id/AST_RL_RANKCONCEPT"
        android:padding="10dp"
        android:layout_marginTop="20dp">

        <LinearLayout
            android:id="@+id/LL_NATURE"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_alignParentTop="true"
            android:layout_alignStart="@id/AST_TV_TITLE_CONFIDENCE"
            android:layout_alignEnd="@id/AST_TV_CONFIDENCE"
            android:background="@drawable/rect_round_white"
            android:padding="8dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Nature"
                android:textAllCaps="true"
                android:textColor="@color/black"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/AST_TV_NATURE"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAllCaps="true"
                android:textStyle="bold"/>
        </LinearLayout>

        <TextView
            android:id="@+id/AST_TV_TITLE_CONFIDENCE"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_below="@id/LL_NATURE"
            android:text="@string/Confidence"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:textAllCaps="true"/>

        <TextView
            android:id="@+id/AST_TV_CONFIDENCE"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="6dp"
            android:paddingEnd="6dp"
            android:layout_marginStart="6dp"
            android:textAlignment="center"
            android:layout_toEndOf="@id/AST_TV_TITLE_CONFIDENCE"
            android:background="@drawable/rect_round_white"
            android:layout_alignBottom="@id/AST_TV_TITLE_CONFIDENCE"
            android:textStyle="bold"/>
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/AST_LL_MONEY"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:layout_marginStart="20dp"
        android:orientation="vertical"
        android:layout_toEndOf="@id/AST_RL_NATURE"
        android:layout_alignTop="@id/AST_RL_NATURE"
        android:background="@drawable/white_bordered_round_rect">

        <TextView
            android:id="@+id/AST_TV_TITLE_MONEY"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Money"
            android:textColor="@color/black"
            android:textAllCaps="true"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/AST_TV_MONEY"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Money"
            android:textAllCaps="true"
            android:textStyle="bold"/>
    </LinearLayout>
</RelativeLayout>